<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroDeVoluntario">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:baselineAligned="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout"
        android:layout_alignParentTop="true">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ed_Nome"
            android:hint="@string/Nome"
            android:maxLines="1"
            android:inputType="text|textCapWords|textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"
            android:ems="10"
            android:id="@+id/ed_NomeUsuario"
            android:hint="@string/NomeUsuario" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/ed_Email"
            android:hint="@string/email"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_Senha"
            android:hint="@string/Senha"
            android:maxLines="1"
            android:inputType="text|textPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/ed_DataNascimento"
            android:singleLine="true"
            android:hint="@string/DataNascimento"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/ed_Telefone"
            android:singleLine="true"
            android:hint="@string/Telefone"
            android:maxLines="1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_Endereco"
            android:hint="@string/Endereco"
            android:maxLines="1"
            android:inputType="text|textCapWords|textPersonName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ed_Cidade"
            android:hint="@string/Cidade"
            android:maxLines="1"
            android:inputType="text|textCapWords|textPersonName" />


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SegundaTela"
        android:id="@+id/bt_SegundaTela"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#4169E1"
        android:textColor="#ffffff"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />


</RelativeLayout>
