<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:weightSum="1">


    <ImageView
        android:layout_width="260dp"
        android:layout_height="222dp"
        android:src="@mipmap/ic_logo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/ed_NomeUsuario"
            android:focusable="true"
            android:inputType="text"
            android:hint="@string/NomeUsuario2" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/ed_Password"
            android:selectAllOnFocus="true"
            android:hint="@string/Senha" />

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:id="@+id/bt_Login"
            android:onClick="saveIni"
            android:background="#4169E1"
            android:textColor="#ffffff" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_ManterConectado"
            android:checked="false"
            android:text="@string/ManterConectado"
            android:layout_marginTop="10dp" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/NovoUsuário"
            android:id="@+id/bt_novousuario"
            android:layout_centerHorizontal="true"
            android:onClick="StartTipoDeCadastro"
            android:clickable="true" />

    </RelativeLayout>


</LinearLayout>