<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipoDeCadastro">


    // Layout superior
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:gravity="top"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CadastroDeVoluntário"
            android:layout_gravity="center_horizontal"
            android:background="#4169E1"
            android:textColor="#ffffff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/bt_CadastraVoluntario" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_CadastroVoluntário"
            android:text="@string/TxtCadastroDeVoluntário" />


    </LinearLayout>

    // Layout inferior
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:gravity="top"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CadastroDeEntidade"
            android:textColor="#ffffff"
            android:background="#4169E1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:id="@+id/bt_CadastraEntidade"
            android:layout_gravity="center_horizontal" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_CadastroDeEntidade"
            android:text="@string/txtCadastroDeEntidade" />



    </LinearLayout>


</RelativeLayout>
