<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:id="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        // Domingo

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Domingo"
                android:id="@+id/ed_Domingo"
                android:checked="false" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:id="@+id/ed_Dom_M"
                android:checked="false" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:id="@+id/ed_Dom_T"
                android:checked="false" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ed_Dom_N"
                android:checked="false"
                android:text="@string/noite" />
        </LinearLayout>


        // Segunda
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Segunda"
                android:checked="false"
                android:id="@+id/ed_Segunda" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:checked="false"
                android:id="@+id/ed_Seg_M" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:checked="false"
                android:id="@+id/ed_Seg_T" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noite"
                android:checked="false"
                android:id="@+id/ed_Seg_N" />
        </LinearLayout>

        // Terça
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Terça"
                android:checked="false"
                android:id="@+id/ed_Terca" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:checked="false"
                android:id="@+id/ed_Ter_M" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:checked="false"
                android:id="@+id/ed_Ter_T" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noite"
                android:checked="false"
                android:id="@+id/ed_Ter_N" />
        </LinearLayout>

        // Quarta
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Quarta"
                android:checked="false"
                android:id="@+id/ed_Quarta" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:checked="false"
                android:id="@+id/ed_Qua_M" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:checked="false"
                android:id="@+id/ed_Qua_T" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noite"
                android:checked="false"
                android:id="@+id/ed_Qua_N" />
        </LinearLayout>


        // Quinta
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Quinta"
                android:checked="false"
                android:id="@+id/ed_Quinta" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:checked="false"
                android:id="@+id/ed_Qui_M" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:checked="false"
                android:id="@+id/ed_Qui_T" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noite"
                android:checked="false"
                android:id="@+id/ed_Qui_N" />
        </LinearLayout>

        // Sexta
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Sexta"
                android:checked="false"
                android:id="@+id/ed_Sexta" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:checked="false"
                android:id="@+id/ed_Sex_M" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:checked="false"
                android:id="@+id/ed_Sex_T" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noite"
                android:checked="false"
                android:id="@+id/ed_Sex_N" />
        </LinearLayout>

        // Sabado
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            //
            <CheckBox
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Sábado"
                android:checked="false"
                android:id="@+id/ed_Sábado" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manhã"
                android:checked="false"
                android:id="@+id/ed_Sab_M" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tarde"
                android:checked="false"
                android:id="@+id/ed_Sab_T" />
            //
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noite"
                android:checked="false"
                android:id="@+id/ed_Saab_N" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tela Anterior"
            android:id="@+id/bt_VoltarTela"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="#a2b2e3"
            android:textColor="#ffffff"
            android:layout_marginRight="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gravar"
            android:id="@+id/bt_Gravar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#4169E1"
            android:textColor="#ffffff"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp" />
    </LinearLayout>


</RelativeLayout>
